--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -55,10 +55,6 @@ on:
         required: false
         type: boolean
         default: true
-      # perform-srcclr-scan:
-      #   description: 'Perform source clear scan'
-      # perform-veracode-sca-scan:
-      #   description: 'Perform Veracode SCA scan'
       perform-blackduck-polaris:
         description: 'Perform BlackDuck Polaris (SAST) scan'
         required: false
@@ -202,9 +198,9 @@ env:
   REPO_VISIBILITY: ${{ github.event.repository.visibility }}
   REPO_NAME: ${{ github.event.repository.name }}
   PIPELINE_VERSION: '1.0.2'  
-  chef-application-name: 'default'   # Custom repo property [primaryApplication]: chef360, automate, infra-server, habitat, supermarket, licensing, downloads, chef-client, inspec, chef-workstation (or derivatives like habitat-builder)
-  chef-ga-build-language: 'default'  # Custom repo property [GABuildLanguage]: go, ruby, erlang, rust (replaces Language input)
-  chef-ga-build-profile: 'default'   # Custom repo property [GABuildProfile]: TBD
+  PRIMARY_APPLICATION: 'default'   # Custom repo property [primaryApplication]: chef360, automate, infra-server, habitat, supermarket, licensing, downloads, chef-client, inspec, chef-workstation (or derivatives like habitat-builder)
+  GA_BUILD_LANGUAGE: 'default'  # Custom repo property [GABuildLanguage]: go, ruby, erlang, rust (replaces Language input)
+  GA_BUILD_PROFILE: 'default'   # Custom repo property [GABuildProfile]: TBD
 
 jobs:
   precompilation-checks:
@@ -243,11 +239,12 @@ jobs:
           echo "BUILD LANG... $GABuildLanguage"
           echo "BUILD PROFILE... $GABuildProfile"
           
-          echo "chef-application-name=$primaryApplication" >> $GITHUB_ENV
-          echo "chef-ga-build-language=$GABuildLanguage" >> $GITHUB_ENV
-          echo "chef-ga-build-profile=$GABuildProfile" >> $GITHUB_ENV
-          # echo "chef-ga-build-language=${{ env.chef-ga-build-language }}" >> $GITHUB_ENV
-          # echo "chef-ga-build-profile=${{ env.chef-ga-build-profile }}" >> $GITHUB_ENV
+          echo "PRIMARY_APPLICATION=$primaryApplication" >> $GITHUB_ENV
+
+          echo "GA_BUILD_LANGUAGE=$GABuildLanguage" >> $GITHUB_ENV
+          echo "GA_BUILD_PROFILE=$GABuildProfile" >> $GITHUB_ENV
+          # echo "chef-ga-build-language=${{ env.GA_BUILD_LANGUAGE }}" >> $GITHUB_ENV
+          # echo "chef-ga-build-profile=${{ env.GA_BUILD_PROFILE }}" >> $GITHUB_ENV
         continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
@@ -256,7 +253,7 @@ jobs:
         run: |
           echo "CI pipeline execution plan for [$REPO_NAME] version $PIPELINE_VERSION"
           echo "  Repository visibility set to $REPO_VISIBILITY [ ${{ inputs.visibility }} ]"
-          echo "  Repository belongs to application ${ chef-application-name }"
+          echo "  Repository belongs to application $PRIMARY_APPLICATION"
           
           echo "  Build language set to ${ chef-ga-build-language }"
           echo "  Build profile set to ${ chef-ga-build-profile }"
@@ -270,16 +267,26 @@ jobs:
             echo "  Perform language-specific linting set to ${{ inputs.perform-language-linting }}"
           fi
           echo "** SECURITY *************************************************"
-          echo "  Perform trufflehog scan set to ${{ inputs.perform-trufflehog-scan }}"
-          echo "  Perform BlackDuck polaris scan set to ${{ inputs.perform-blackduck-polaris }}"
-          echo "  Polaris application name set to ${{ inputs.polaris-application-name }}"
-          echo "  Polaris project name set to ${{ inputs.polaris-project-name }}"
-          echo "  Perform BlackDuck SCA scan set to ${{ inputs.perform-blackduck-sca-scan }}"
+          if [ ${{ inputs.perform-trufflehog-scan }} ]; then
+            echo "  Perform trufflehog scan set to ${{ inputs.perform-trufflehog-scan }}"
+          fi
+          if [ ${{ inputs.perform-blackduck-polaris }} ]; then
+            echo "  Perform BlackDuck polaris scan set to ${{ inputs.perform-blackduck-polaris }}"
+            echo "  Polaris application name set to ${{ inputs.polaris-application-name }}"
+            echo "  Polaris project name set to ${{ inputs.polaris-project-name }}"
+          fi
+          if [ ${{ inputs.perform-blackduck-sca-scan }} ]; then
+            echo "  Perform BlackDuck SCA scan set to ${{ inputs.perform-blackduck-sca-scan }}"
+          fi
           echo "** BUILD AND UNIT TEST *************************************"
-          echo "  BUILD set to ${{ inputs.build }}"
-          echo "  Language set to ${{ env.chef-ga-build-language }} "
-          echo "  passed in as LANGUAGE = ${{ inputs.language }}"
-          echo "  Unit tests set to ${{ inputs.unit-tests }}"
+          if [ ${{ inputs.build }} ]; then
+            echo "  BUILD set to ${{ inputs.build }}"
+            echo "  Language set to ${{ env.GA_BUILD_LANGUAGE }} "
+            echo "  passed in as LANGUAGE = ${{ inputs.language }}"
+          fi
+          if [ ${{ inputs.unit-tests }} ]; then
+            echo "  Unit tests set to ${{ inputs.unit-tests }}"
+          fi
           echo "** SONAR ***************************************************"
           echo "  Perform SonarQube scan set to ${{ inputs.perform-sonarqube-scan }}"
           echo "  Perform Sonar build set to ${{ inputs.perform-sonar-build }}"
@@ -292,15 +299,24 @@ jobs:
           echo "  Habitat build set to ${{ inputs.habitat-build }}"
           echo "  Publish packages set to ${{ inputs.publish-packages }}"
           echo "** SBOM ****************************************************"
-          echo "  Generate SBOM set to ${{ inputs.generate-sbom }}"
-          echo "  Export SBOM to GitHub set to ${{ inputs.export-github-sbom }}"
-          echo "  Generate BlackDuck SBOM set to ${{ inputs.generate-blackduck-sbom }}"
-          echo "  Generate MSFT SBOM set to ${{ inputs.generate-msft-sbom }}"
-          echo " License scout set to ${{ inputs.license_scout }}"
+          if [ ${{ inputs.generate-sbom }} ]; then
+            echo "  Generate SBOM set to ${{ inputs.generate-sbom }}"
+            echo "  Export SBOM from GitHub set to ${{ inputs.export-github-sbom }}"
+            echo "  Generate BlackDuck SBOM set to ${{ inputs.generate-blackduck-sbom }}"
+            echo "  Generate MSFT SBOM set to ${{ inputs.generate-msft-sbom }}"
+            echo "  License scout set to ${{ inputs.license_scout }}"
+          fi
           echo "** USER DEFINED FLAGS ***************************************"
           if [ -n "$${{ inputs.udf1 }}" ]; then  # or == 'true' or = " some value" or -z (empty string)
             echo "  UDF1 set to ${{ inputs.udf1 }}"
           fi
+          if [ -n "$${{ inputs.udf2 }}" ]; then 
+            echo "  UDF1 set to ${{ inputs.udf2 }}"
+          fi
+          if [ -n "$${{ inputs.udf3 }}" ]; then  
+            echo "  UDF1 set to ${{ inputs.udf3 }}"
+          fi
+          echo "*************************************************************"
         # echo "The job_id is: $GITHUB_JOB"   
         # echo ${{ secrets.GITHUB_TOKEN }} DO NOT ECHO THIS
 
@@ -325,93 +341,99 @@ jobs:
      
 # TODO: make three separate flows, by language with all steps (as oposed to one file per step with language-branching in each)
 # language specific tests (gosec, rubocop, linters, etc.)
-  rust-language-checks:
-    name: 'Rust-specific pre-compilation steps and linting'  
-    if: ${{ inputs.language == 'Rust' && inputs.perform-language-linting == true }}
+# ${{ inputs.language == 'rust' && inputs.perform-language-linting == true }}
+# TODO: note you cannot do a conditional on the job, only on the step if using an ENV VAR
+  language-specific-checks:
+    name: 'Language-specific pre-compilation steps and linting'  
+    if: inputs.perform-language-linting 
     runs-on: ubuntu-latest
     needs: checkout
     steps:
-      - run: echo 'crate linter'
-# https://github.com/rust-lang/rust-clippy
-# cargo clippy --all-targets --all-features -- -D warnings
-
-  ruby-language-checks:
-    name: 'Ruby-specific pre-compilation steps and linting'  
-    if: ${{ inputs.language == 'Ruby' && inputs.perform-language-linting == true }}
-    runs-on: ubuntu-latest
-    needs: checkout
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Set up ruby version
+      - name: Rust language checks
+        if: env.GA_BUILD_LANGUAGE == 'rust' 
+        run: echo 'crate linter'
+        # https://github.com/rust-lang/rust-clippy
+        # cargo clippy --all-targets --all-features -- -D warnings
+    
+      - name: Ruby language checks
+        if: env.GA_BUILD_LANGUAGE == 'ruby'
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-# generate gemfile.lock (TODO: move this below to OWASP)
-      - run: bundle install
-      # - name: 'Bundler Audit'
-      #   if: ${{ inputs.language == 'Ruby' && inputs.perform-complexity-checks == true }}
-      #   uses: andrewmcodes/bundler-audit-action@main
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # generate gemfile.lock (TODO: move this below to OWASP)
+      - name: RuboCop Lint
+        if: env.GA_BUILD_LANGUAGE == 'ruby' 
+        run: |
+          echo 'ruby linter'
+        # gem install rubocop
+        # rubocop --format=github --display-cop-names --extra-details --force-exclusion .
+        # bundle install
+        # - name: 'Bundler Audit'
+        #   if: ${{ inputs.language == 'Ruby' && inputs.perform-complexity-checks == true }}
+        #   uses: andrewmcodes/bundler-audit-action@main
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # TODO: get with Marc/Prajakta on this sequence for Ruby uses: chef/common-github-actions/.github/workflows/rubocop.yml@main
         # TODO: this is also not certified, craete a copy in .github/actions - https://github.com/marketplace/actions/bundler-audit-action
         # Bundler Audit Action is not certified by GitHub. It is provided by a third-party and is governed by separate terms of service, privacy policy, and support documentation.
 
-  go-language-checks:
-    name: 'Go-specific pre-compilation steps and linting'  
-    if: ${{ inputs.language == 'Go' && inputs.perform-language-linting == true }}
-    runs-on: ubuntu-latest
-    needs: checkout
-    steps:
-      - run: |
+      - name: Go language checks
+        if: env.GA_BUILD_LANGUAGE == 'go'
+        uses: actions/setup-go@v5
+        with: 
+          go-version: '1.24'
+          check-latest: true
+      - name: Go linting and security checks  
+        if: env.GA_BUILD_LANGUAGE == 'go'
+        run: |
           echo 'go linter'
-    # TODO: https://github.com/marketplace/actions/gosec-security-checker      
-      # go install github.com/securego/gosec/v2/cmd/gosec@latest
-      # GHA at https://github.com/securego/gosec
-      # gosec ./... >> ./bin/gosec.out
-    # https://go.googlesource.com/vuln - govulncheck
-    # go install golang.org/x/vuln/cmd/govulncheck@latest
-    # govulncheck ./... >> ./bin/security/govuln.out        
-    # go install honnef.co/go/tools/cmd/staticcheck@latest
-    # staticcheck ./... >> ./bin/staticcheck.out
+  
+        # TODO: https://github.com/marketplace/actions/gosec-security-checker      
+        # go install github.com/securego/gosec/v2/cmd/gosec@latest
+        # TODO: see scc install to get TEMP DIR
+        # GHA at https://github.com/securego/gosec
+        # gosec ./... >> ./bin/gosec.out
+        # https://go.googlesource.com/vuln - govulncheck
+        # go install golang.org/x/vuln/cmd/govulncheck@latest
+        # govulncheck ./... >> ./bin/security/govuln.out        
+        # go install honnef.co/go/tools/cmd/staticcheck@latest
+        # staticcheck ./... >> ./bin/staticcheck.out
 
   # https://github.com/marketplace/actions/dependency-check & https://owasp.org/www-project-dependency-check/ 
   #     and flags at https://jeremylong.github.io/DependencyCheck/dependency-check-cli/arguments.html
   language-agnostic-checks:
-    name: 'OWASP dependency checks'  
+    name: 'Language-agnostic pre-compilation steps'
+    if: inputs.perform-language-linting 
     runs-on: ubuntu-latest
     needs: checkout
     steps:
-      - name: Echo placeholder
+      - name: Language agnostic checks (OWASP dep check)
         run: echo "placeholder"
-  #     - name: 'Language-agnostic pre-compilation steps (OWASP dependency check)'  
-  #       uses: dependency-check/Dependency-Check_Action@main
-  # TODO: Dependency Check is not certified by GitHub. It is provided by a third-party and is governed by separate terms of service, privacy policy, and support documentation
-  # create a copy in common-github-actions/.github/actions/owasp-dependency-check.yml
-      # - name: 'OWASP dependency check'
-      #   uses: dependency-check/Dependency-Check_Action@v4.0.0
-      #   with:
-      #     project: ${{ github.event.repository.name }} 
-  #       with:
-  #         project: $REPO_NAME
-  #         path: '.'
-  #         format: 'JSON'
-  # # out: 'reports' # this is the default, no need to specify unless you wish to override it
-  #         args: >
-  #           --enableRetired
-  #           --prettyPrint
-      # - name: Upload Test results
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: OWASP dependency check report
-      #     path: ${{github.workspace}}/reports
-    # TODO: add flag --failOnCVSS 7
-    # TODO: integrate with SonarQube
-    # TODO: correct artifact upload names like Sonu's in sbom.yml
+        #     - name: 'Language-agnostic pre-compilation steps (OWASP dependency check)'  
+        #       uses: dependency-check/Dependency-Check_Action@main
+        # TODO: Dependency Check is not certified by GitHub. It is provided by a third-party and is governed by separate terms of service, privacy policy, and support documentation
+        # create a copy in common-github-actions/.github/actions/owasp-dependency-check.yml
+        # - name: 'OWASP dependency check'
+        #   uses: dependency-check/Dependency-Check_Action@v4.0.0
+        #   with:
+        #     project: ${{ github.event.repository.name }} 
+        #       with:
+        #         project: $REPO_NAME
+        #         path: '.'
+        #         format: 'JSON'
+        # # out: 'reports' # this is the default, no need to specify unless you wish to override it
+        #         args: >
+        #           --enableRetired
+        #           --prettyPrint
+        # - name: Upload Test results
+        #   uses: actions/upload-artifact@v4
+        #   with:
+        #     name: OWASP dependency check report
+        #     path: ${{github.workspace}}/reports
+        # TODO: add flag --failOnCVSS 7
+        # TODO: integrate with SonarQube
+        # TODO: correct artifact upload names like Sonu's in sbom.yml
               
   ################################################################################################################
   #
@@ -422,7 +444,7 @@ jobs:
   # # security scans
   run-trufflehog:
     name: 'Trufflehog scan'
-    if: ${{ inputs.perform-trufflehog-scan == true }}
+    if: ${{ inputs.perform-trufflehog-scan }}
     uses: chef/common-github-actions/.github/workflows/trufflehog.yml@main
     needs: checkout
 
