--- a/.github/workflows/stubs/ci-main-pull-request-stub-trufflehog-only.yml
+++ b/.github/workflows/stubs/ci-main-pull-request-stub-trufflehog-only.yml
@@ -1,6 +1,6 @@
 # stub to call common GitHub Action (GA) as part of Continuous Integration (CI) Pull Request process checks for main branch
 #
-# inputs are described in the <org>/common-github-actions/<GA.yml> with same name as this stub
+# inputs are described in the chef/common-github-actions/<GA.yml> with same name as this stub
 #
 
 name: CI Pull Request on Main Branch
@@ -26,7 +26,7 @@ jobs:
     steps:
       - name: echo version of stub and inputs
         run: |
-          echo "[ci-main-pull-request-stub-trufflehog-only.yml] version $STUB_VERSION"
+          echo "CI main pull request stub version $STUB_VERSION"
 
   call-ci-main-pr-check-pipeline:
     uses: chef/common-github-actions/.github/workflows/ci-main-pull-request.yml@main
@@ -51,7 +51,7 @@ jobs:
       # requires secrets POLARIS_SERVER_URL and POLARIS_ACCESS_TOKEN
       perform-blackduck-polaris: false
       polaris-application-name: 'Chef-Chef360'  # one of these: Chef-Agents, Chef-Automate, Chef-Chef360, Chef-Habitat, Chef-Infrastructure-Server, Chef-Shared-Services
-      polaris-project-name: ${{ github.event.repository.name }}  # typically the application name, followed by - and the repository name, for example Chef-Chef360-chef-vault'
+      polaris-project-name: Chef-Automate-${{ github.event.repository.name }}  # typically the application name, followed by - and the repository name, for example Chef-Automate-chef-vault
       perform-blackduck-sca-scan: false
       
       # perform application build and unit testing, will use custom repository properties when implemented for chef-primary-application, chef-build-profile, and chef-build-language
@@ -60,7 +60,7 @@ jobs:
       # language: $chef-ga-build-language   # this will be removed from stub as autodetected in central GA
       unit-tests: false
  
-      # perform SonarQube scan, with or wihout unit test coverage data
+      # perform SonarQube scan, with or without unit test coverage data
       # requires secrets SONAR_TOKEN and SONAR_HOST_URL (progress.sonar.com)
       perform-sonarqube-scan: false
       # perform-sonar-build: true
