--- a/.github/workflows/stubs/ci-main-pull-request-stub.yml
+++ b/.github/workflows/stubs/ci-main-pull-request-stub.yml
@@ -55,8 +55,9 @@ jobs:
       perform-blackduck-sca-scan: true
      
       # perform application build and unit testing, will use custom repository properties when implemented for chef-primary-application, chef-build-profile, and chef-build-language
-      build: true
-      language: 'Ruby'    # Go, Ruby, Rust  
+      build: false
+      # ga-build-profile: $chef-ga-build-profile   
+      # language: $chef-ga-build-language   # this will be removed from stub as autodetected in central GA
       unit-tests: false
  
       # perform SonarQube scan, withor without unit test coverage data
