adding both trivy formats (table, json) and ignoring python in BD

--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -461,6 +461,8 @@ jobs:
     if: ${{ inputs.perform-trivy-scan }}
     uses: chef/common-github-actions/.github/workflows/trivy.yml@main
     needs: checkout
+    with:
+      version: ${{ inputs.version }}
 
   # run-srcclr:
   #   if: ${{ inputs.perform-srcclr-scan == true }}
