--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -186,6 +186,7 @@ jobs:
           blackducksca_url: ${{ secrets.BLACKDUCK_SBOM_URL }}  # BLACKDUCK_URL, should be https://progresssoftware.app.blackduck.com/ 
           blackducksca_token: ${{ secrets.BLACKDUCK_SCA_TOKEN }}  # was BLACKDUCK_API_KEY
           # blackducksca_scan_failure_severities: 'BLOCKER,CRITICAL'
+          detect_args: --detect.excluded.detector.types=PIP   # ignore python per https://documentation.blackduck.com/bundle/detect/page/packagemgrs/python.html
           
           ### ---------- SRM SCANNING: REQUIRED FIELDS ----------
           # srm_url: ${{ secrets.BLACKDUCK_SBOM_URL }}  # SRM_URL
