--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,6 +1,7 @@
 # trivy.yml
 name: Trivy dependency vulnerability scan
-    
+# see https://github.com/aquasecurity/trivy-action    
+
 on:
   workflow_call:
     inputs:
@@ -25,6 +26,11 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v4
 
+      - name: Generate Filename Prefix
+        run: |
+          FILE_PREFIX=$(echo "${{ github.repository }}-${{ github.ref_name }}-${{ inputs.version }}-" | sed 's|/|-|g')-$(date +%Y%m%d%H%M%S)
+          echo "FILE_PREFIX=${FILE_PREFIX}" >> $GITHUB_ENV
+
       # The first call to the action will invoke setup-trivy and install trivy
       - name: Generate Trivy Vulnerability Report (JSON)
         uses: aquasecurity/trivy-action@master
@@ -38,9 +44,11 @@ jobs:
       - name: Upload Vulnerability Scan Results
         uses: actions/upload-artifact@v4
         with:
-          name: trivy-report-${{ github.event.repository.name }}-${{ github.ref_name }}-${{ inputs.version }}-$(date +'%Y%m%d')-json
+          name: ${{ env.FILE_PREFIX }}-Trivy.json
+          # name: trivy-report-${{ github.event.repository.name }}-${{ github.ref_name }}-${{ inputs.version }}-$(date +'%Y%m%d')-json
           path: trivy-report.json
           retention-days: 30
+
 
       - name: Generate Trivy Vulnerability Report (TABLE)
         uses: aquasecurity/trivy-action@master
@@ -55,7 +63,8 @@ jobs:
       - name: Upload Vulnerability Scan Results
         uses: actions/upload-artifact@v4
         with:
-          name: trivy-report-${{ github.event.repository.name }}-${{ github.ref_name }}-${{ inputs.version }}-$(date +'%Y%m%d')-text
+          name: ${{ env.FILE_PREFIX }}-Trivy.json
+          # name: trivy-report-${{ github.event.repository.name }}-${{ github.ref_name }}-${{ inputs.version }}-$(date +'%Y%m%d')-text
           path: trivy-report.txt
           retention-days: 30
           #   - name: Fail build on High/Criticial Vulnerabilities
