--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -77,12 +77,7 @@ on:
       polaris-project-name:
         description: 'Polaris project name, typically the application name, followed by - and the repository name, for example Chef-Chef360-chef-vault'
         required: false
-        type: string
-      perform-blackduck-sca-scan: # combined with generate sbom below
-        description: 'Perform BlackDuck SCA scan'
-        required: false
-        type: boolean
-        default: true
+        type: string     
       build:
         description: 'CI Build (language-specific)'
         required: false
@@ -173,11 +168,26 @@ on:
         required: false
         type: boolean
         default: true
-      generate-blackduck-sbom:  # obsolete
-        description: 'Generate SBOM using BlackDuck polaris'
+      perform-blackduck-sca-scan: # combined with generate sbom below, also needs version above
+        description: 'Perform BlackDuck SCA scan'
         required: false
         type: boolean
-        default: true 
+        default: false
+      blackduck-project-group-name:
+        description: 'BlackDuck project group name, typically one of (Chef), Chef-Agents, Chef-Automate, Chef-Chef360, Chef-Habitat, Chef-Infrastructure-Server, Chef-Shared-Services'
+        required: false
+        type: string
+        default: 'Chef' 
+      blackduck-project-name:
+        description: 'BlackDuck project name, typically the repository name'
+        required: false
+        type: string
+        default: ${{ github.event.repository.name }}
+      generate-blackduck-sbom:  # obsolete
+        description: 'Generate SBOM using BlackDuck polaris (OBSOLETE, use perform-blackduck-sca-scan instead)'
+        required: false
+        type: boolean
+        default: false 
       generate-msft-sbom:
         description: 'Generate SBOM using MSFT tools'
         required: false
@@ -476,23 +486,95 @@ jobs:
   #   secrets: inherit
       
   # BLACKDUCK POLARIS SAST SCAN
+  # NOW THE LATEST COMMUNITY - https://github.com/prgs-community/githubactions-securityscans/blob/main/polaris/action.yml 
   # # updated to https://documentation.blackduck.com/bundle/bridge/page/documentation/c_download.html#polaris-download
   # # https://github.com/marketplace/actions/black-duck-security-scan
   # NOT USED - from https://documentation.blackduck.com/bundle/bridge/page/documentation/t_github-polaris-quickstart.html
   # parameters @ https://documentation.blackduck.com/bundle/bridge/page/documentation/c_github-polaris.html
   # internal confluence https://progresssoftware.atlassian.net/wiki/spaces/TCE/pages/1010336076/Polaris#Examples
+  #   and https://progresssoftware.atlassian.net/wiki/spaces/TCE/pages/1010303415/Polaris+-+Github+Actions+Templates
   # chef-vault at https://polaris.blackduck.com/portfolio/portfolios/8b7ad6f7-6dcb-49ec-bded-bfc4f190d4f8/portfolio-items/fe369baf-11d2-4989-bcb7-045577856dcc/projects/2460eabd-d033-48a1-a378-6cadd49be6d1/tests/sast?branchId=a6d2c02a-05f8-4557-bfa1-c40e9337ee5d
   BlackDuck-Polaris-SAST:
+    # branding: applied at action.yml level, not workflow, see https://docs.github.com/en/actions/reference/workflows-and-actions/metadata-syntax#branding
+    #   icon: 'shield'
+    #   color: 'red'
     if: ${{ inputs.perform-blackduck-polaris == true }}
     runs-on: ubuntu-latest
     needs: checkout
     steps:
       - name: Starting Black Duck Polaris scan
         run: |
+          echo "Starting Polaris SAST scan"
+          echo "Below variable should be https://polaris.blackduck.com"
           echo "POLARIS_SERVER_URL: ${{ secrets.POLARIS_SERVER_URL }}"
           echo "Polaris application name: ${{ inputs.polaris-application-name }}"
           echo "Polaris project name: ${{ inputs.polaris-project-name }}"
-        # echo "POLARIS_ACCESS_TOKEN: ${{ secrets.POLARIS_ACCESS_TOKEN }}"
+          echo "POLARIS_ACCESS_TOKEN: ${{ secrets.POLARIS_ACCESS_TOKEN }}"
+        # other vars
+  # working-directory:
+  #   description: 'Working directory for the scan'
+  #   required: false
+  #   default: '.'
+  # config-path:
+  #   description: 'Path to Detect configuration file'
+  #   required: false
+  #   default: ''
+  # coverity-config-path:
+  #   description: 'Path to Coverity configuration file'
+  #   required: false
+  #   default: ''
+  # coverity-build-command:
+  #   description: 'Coverity build command'
+  #   required: false
+  #   default: ''
+  # coverity-clean-command:
+  #   description: 'Coverity clean command'
+  #   required: false
+  #   default: ''
+  # coverity-args:
+  #   description: 'Additional Coverity arguments'
+  #   required: false
+  #   default: ''
+  # detect-search-depth:
+  #   description: 'Detect search depth'
+  #   required: false
+  #   default: ''
+  # detect-args:
+  #   description: 'Additional Detect arguments'
+  #   required: false
+  #   default: ''
+  # assessment-mode:
+  #   description: 'Assessment mode (CI or SOURCE_UPLOAD)'
+  #   required: false
+  #   default: 'CI'
+  # source-archive:
+  #   description: 'Path to source archive for SOURCE_UPLOAD mode'
+  #   required: false
+  #   default: ''
+  # source-excludes:
+  #   description: 'Source exclusion patterns (comma-separated)'
+  #   required: false
+  #   default: ''
+  # preserve-symlinks:
+  #   description: 'Preserve symbolic links in source upload'
+  #   required: false
+  #   default: 'false'
+  # wait-for-scan:
+  #   description: 'Wait for scan completion'
+  #   required: false
+  #   default: 'true'
+  # mark-build-status:
+  #   description: 'Mark build status on policy violations'
+  #   required: false
+  #   default: ''
+  # pr-comment-severities:
+  #   description: 'Severities to include in PR comments'
+  #   required: false
+  #   default: 'CRITICAL,HIGH,MEDIUM'
+  # diagnostic:
+  #   description: 'Enable diagnostic files upload'
+  #   required: false
+  #   default: 'false'
       - name: Check input variables
         run: |
           if [[ -z "${{ inputs.polaris-application-name }}" ]] || [[ -z "${{ inputs.polaris-project-name }}" ]]; then
@@ -508,12 +590,36 @@ jobs:
           ### SCANNING: Required fields
           polaris_server_url: ${{ secrets.POLARIS_SERVER_URL }} # https://polaris.blackduck.com
           polaris_access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }}
-          polaris_assessment_types: "SAST"  # may not be licensed for SCA, in the next job ("SCA, SAST")
-          ### SCANNING: Optional fields
+          polaris_assessment_types: "SAST"
           polaris_application_name: ${{ inputs.polaris-application-name }}  // <Solution>-<Product>-<Module If Applicable>-<Optional Numeric Suffix If Needed>
           polaris_project_name: ${{ inputs.polaris-project-name }}  // typically GitHub repo name
           github_token: ${{ secrets.GITHUB_TOKEN }}
-        # from Jan's
+          
+          # from https://github.com/prgs-community/githubactions-securityscans/blob/main/polaris/action.yml
+          # with:
+          # polaris_server_url: ${{ inputs.polaris-server-url }}
+          # polaris_access_token: ${{ inputs.polaris-access-token }}
+          # polaris_application_name: ${{ inputs.application-name }}
+          # polaris_project_name: ${{ inputs.project-name }}
+          # polaris_assessment_types: "SAST"
+          polaris_assessment_mode: 'CI' # ${{ inputs.assessment-mode }} CI or SOURCE_UPLOAD
+          polaris_waitForScan: 'true' # ${{ inputs.wait-for-scan }}
+          project_directory: '.'  # ${{ inputs.working-directory }}
+          project_source_archive: '' # ${{ inputs.source-archive != '' && inputs.source-archive || null }}
+          project_source_excludes: '' # ${{ inputs.source-excludes != '' && inputs.source-excludes || null }}
+          project_source_preserveSymLinks: 'false' # ${{ inputs.preserve-symlinks }}
+          detect_search_depth: '' # ${{ inputs.detect-search-depth != '' && inputs.detect-search-depth || null }}
+          detect_args: '' # ${{ inputs.detect-args != '' && inputs.detect-args || null }}
+          detect_config_path: '' # ${{ inputs.config-path != '' && inputs.config-path || null }}
+          coverity_build_command: '' # ${{ inputs.coverity-build-command != '' && inputs.coverity-build-command || null }}
+          coverity_clean_command: '' # ${{ inputs.coverity-clean-command != '' && inputs.coverity-clean-command || null }}
+          coverity_config_path: '' # ${{ inputs.coverity-config-path != '' && inputs.coverity-config-path || null }}
+          coverity_args: '' # ${{ inputs.coverity-args != '' && inputs.coverity-args || null }}
+          include_diagnostics: 'false' # ${{ inputs.diagnostic }}
+          mark_build_status: '' # ${{ inputs.mark-build-status != '' && inputs.mark-build-status || null }}
+          # github_token: ${{ github.token }}
+
+        # options from Jan's (FlowMon. GitLab)
         # polaris_prComment_enabled: ${{ github.event_name == 'pull_request' && 'true' || 'false' }}
         # polaris_prComment_severities: "CRITICAL,HIGH"
         
@@ -521,8 +627,7 @@ jobs:
           ### SARIF report parameters
           # polaris_reports_sarif_create: true
           # polaris_upload_sarif_report: true
-        
-          ### Mark build status if policy violating issues are found
+        ### Mark build status if policy violating issues are found
           # mark_build_status: 'success'
 
   # ################################################################################################################
@@ -786,7 +891,9 @@ jobs:
       version: ${{ inputs.version }}
       export-github-sbom: ${{ inputs.export-github-sbom }}
       perform-blackduck-sca-scan: ${{ inputs.perform-blackduck-sca-scan }}
-      generate-blackduck-sbom: ${{ inputs.generate-blackduck-sbom }}  # obsolete, remove TODO
+      # generate-blackduck-sbom: ${{ inputs.generate-blackduck-sbom }}  # obsolete, remove TODO
+      blackduck-project-group-name: ${{ inputs.blackduck-project-group-name }}
+      blackduck-project-name: ${{ inputs.blackduck-project-name }}
       generate-msft-sbom: ${{ inputs.generate-msft-sbom }}
       license_scout: ${{ inputs.license_scout }}
       go-private-modules: ${{ inputs.go-private-modules }}
